# fast-compress

./: CMakeCache.txt  CMakeLists.txt  FastCompress  Makefile  cmake_install.cmake  compress.h  compression_test_results.csv  main.cpp  script.py  util.h
